# cpp-for-programmers

./: .gitignore  README.md
exercise1/: CMakeLists.txt  a.cpp  b.cpp  temperatures.hpp
exercise2/: CMakeLists.txt  task1.cpp  task4.cpp  task5.cpp  task6.cpp
exercise3/: CMakeLists.txt  commodity.hpp  task1.hpp  task2.cpp  task4.cpp
exercise4/: CMakeLists.txt  task1.cpp  task2.cpp
exercise5/: CMakeLists.txt  chess.cpp  chess2_anonym_func.cpp
exercise6/: CMakeLists.txt  task1.cpp  task2.cpp
exercise7/task1/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp  task1b.txt
exercise7/task2/: CMakeLists.txt  main.cpp  set.cpp  set.hpp
exercise8/: CMakeLists.txt  task1.cpp  task2.cpp
exercise9/: CMakeLists.txt  main.cpp
